--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=profissional_api
+spring.application.name=student
+spring.datasource.url=jdbc:h2:mem:tutorialdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.encoding=UTF-8
